# sst-core

./: Jenkinsfile  Makefile.am  autogen.sh  configure.ac
src/sst/core/: Makefile.am  factory.cc
test/: CMakeLists.txt  Makefile  Makefile.am  README.md  demo.sh  exampleTest.cc  simpleComponent.lo
